--- a/src/app/bienvenida/bienvenida.page.html
+++ b/src/app/bienvenida/bienvenida.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title ><h5 >Duoc UC</h5></ion-title>
-    <ion-icon (click)="cerrar_sesion()" class="icono" name="person-outline"></ion-icon>
+    <ion-icon (click)="cerrar_sesion()" class="icono" name="arrow-back-outline"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
