--- a/src/app/bienvenida/bienvenida.page.html
+++ b/src/app/bienvenida/bienvenida.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title ><h5 >Duoc UC</h5></ion-title>
+  <ion-toolbar color="Dark">
+    <ion-title ><h4 >Duoc UC - Posts</h4></ion-title>
     <ion-icon (click)="cerrar_sesion()" class="icono" name="arrow-back-outline"></ion-icon>
   </ion-toolbar>
 </ion-header>
@@ -8,7 +8,7 @@
 <ion-content>
   <div class=" ion-padding" >
     <ion-text color="black">
-      <h1>Bienvenido/a, {{datos.username}}</h1>
+      <h1>Bienvenid@, {{datos.username}} </h1>
     </ion-text>
   </div>
 
