--- a/src/app/comentarios/comentarios.page.html
+++ b/src/app/comentarios/comentarios.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title ><h5 >tus comentarios</h5></ion-title>
+  <ion-toolbar color="Black">
+    <ion-title ><h4 >Duoc UC - comentarios</h4></ion-title>
     
     <ion-buttons slot="start">
       <ion-back-button defaultHref="bienvenida"></ion-back-button>
@@ -20,9 +20,6 @@
         <h4>{{info.body}}</h4>
         
     </ion-list>
-    
-    
-
-    
+  
   </div>
 </ion-content>
